[project]
name = "media-dl"
version = "2.1.1"
description = "Download any video/audio you want from a simple URL ✨"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # CLI
    "typer>=0.12.5",
    "rich>=13.9.2",
    # Core
    "yt-dlp>=2024.10.7",
    "strenum>=0.4.15",
    "pydantic>=2.9.2",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.42",
    "mkdocstrings>=0.26.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[project.scripts]
media-dl = "media_dl.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
