[project]
name = "media-dl"
version = "2.1.1"
description = "Download any video/audio you want from a simple URL ✨"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # CLI
    "typer>=0.12.5",
    "rich>=13.9.2",
    # Core
    "yt-dlp>=2024.10.7",
    "strenum>=0.4.15",
    "pydantic>=2.9.2",
    "typing-extensions>=4.12.2",
    "lazy-imports>=0.3.1",
    "pyffmpeg-bin>=1.8.0.1",
    "mutagen>=1.47.0",
    "pathvalidate>=3.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.42",
    "mkdocstrings>=0.26.2",
]

[project.scripts]
media-dl = "media_dl.cli:run"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
